--- a/inc/assets/pgs/Filiere.html
+++ b/inc/assets/pgs/Filiere.html
@@ -1,3 +1,4 @@
+<script src="./assets/pgs/mn.js"></script>
 <div class="container-fluid">
                 <!--Début Tableau--->
              <div class="row">
@@ -17,7 +18,7 @@
                             <br>
                             <div class="row">
                                 <div class="text-center">
-                                    <button type="submit" class="btn btn-success btn-fill btn-wd">Ajouter/Modifier</button>
+                                    <button type="button" class="btn btn-success btn-fill btn-wd" id="addFilierBtn">Ajouter</button>
                                 </div>
                              </div>
                         </form>
