--- a/inc/assets/pgs/Encadrants.html
+++ b/inc/assets/pgs/Encadrants.html
@@ -55,6 +55,11 @@
                                     <button type="button" class="btn btn-info btn-fill btn-wd" id="addTeacherBtn" >Ajouter</button>
                                 </div>
                              </div>
+                             <!-- <div class="row">
+                                 <div class="text-center">
+                                     <button type="button" class="btn btn-info btn-fill btn-wd" id="addTeacherBtn" >reset</button>
+                                 </div>
+                              </div> -->
                         </form>
                     </div>
 
@@ -71,34 +76,9 @@
                                     <th>Modifier</th>
                                     <th>Supprimer</th>
                                 </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Redouane RAMIZ</td>
-                                        <td>0600000000</td>
-                                        <td>redouaneramiz@gmail.com</td>
-                                        <td>Matiérer - 2</td>
-                                        <td>r.ramiz</td>
-                                        <td><button type="submit" class="btn btn-info btn-fill btn-wd">Modifier</button></td>
-                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Redouane RAMIZ</td>
-                                        <td>0600000000</td>
-                                        <td>redouaneramiz@gmail.com</td>
-                                        <td>Matiérer - 2</td>
-                                        <td>r.ramiz</td>
-                                        <td><button type="submit" class="btn btn-info btn-fill btn-wd">Modifier</button></td>
-                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Redouane RAMIZ</td>
-                                        <td>0600000000</td>
-                                        <td>redouaneramiz@gmail.com</td>
-                                        <td>Matiérer - 2</td>
-                                        <td>r.ramiz</td>
-                                        <td><button type="submit" class="btn btn-info btn-fill btn-wd">Modifier</button></td>
-                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-                                    </tr>
+                                <tbody  id="teachersTable">
+
+
                                 </tbody>
                             </table>
                         </div>
