--- a/inc/assets/pgs/Groupe.html
+++ b/inc/assets/pgs/Groupe.html
@@ -1,3 +1,4 @@
+<script src="./assets/pgs/mn.js"></script>
 <div class="container-fluid">
         <div class="row">
             <div class="col-lg-12 col-sm-12">
@@ -8,18 +9,14 @@
                     <div class="content">
                             <div class="row">
                                 <div class="col-lg-6 col-sm-12">
-                                    <label>Nom Groupe * </label>
-                                    <input name="NMG" Id="NMG" type="text" class="form-control border-input" value="">
+                                    <label>Nom Groupe * </label><span id="grpModifyID" hidden></span>
+                                    <input id="GrpName" type="text" class="form-control border-input" value="">
                                 </div>
 
                                 <div class="col-lg-6 col-sm-12">
                                     <label>Filières  * </label>
-                                    <select class="form-control border-input" id="Filieres" name="Filieres">
-                                        <option></option>
-                                        <option>Équitation</option>
-                                        <option>Nutrition des cheveux</option>
-                                        <option>Filiere1</option>
-                                        <option>Filiere2</option>
+                                    <select class="form-control border-input" id="GrpFiliersCombo" name="Filieres">
+
                                       </select>
                                 </div>
                             </div>
@@ -28,7 +25,7 @@
                             <div class="stats">
                                 <div class="col-xs-10">
                                     <div class="numbers">
-                                        <button type="submit" class="btn btn-success btn-fill btn-wd">Ajouter</button>
+                                        <button type="button" id="addGrpBtn" class="btn btn-success btn-fill btn-wd">Ajouter</button>
                                     </div>
                                 </div>
                             </div>
@@ -42,31 +39,9 @@
                                     <th>Filiere</th>
                                     <th>Nombre des stagiaires</th>
                                 </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>Grpupe-A</td>
-                                        <td>Équitation</td>
-                                        <td>20</td>
-                                        <td><button type="submit" class="btn btn-info btn-fill btn-wd">Gérer les stagiaires</button></td>
-                                        <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
-                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Grpupe-B</td>
-                                        <td>Équitation</td>
-                                        <td>20</td>
-                                        <td><button type="submit" class="btn btn-info btn-fill btn-wd">Gérer les stagiaires</button></td>
-                                        <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
-                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-                                    </tr>
-                                    <tr>
-                                        <td>Grpupe-C</td>
-                                        <td>Nutrition des cheveux</td>
-                                        <td>20</td>
-                                        <td><button type="submit" class="btn btn-info btn-fill btn-wd">Gérer les stagiaires</button></td>
-                                        <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Modifier</button></td>
-                                        <td><button type="submit" class="btn btn-danger btn-fill btn-wd">Supprimer</button></td>
-                                    </tr>
+                                <tbody id="grpsTable">
+
+
                                 </tbody>
                             </table>
                         </div>
