--- a/inc/assets/pgs/Groupe.html
+++ b/inc/assets/pgs/Groupe.html
@@ -1,5 +1,41 @@
 <script src="./assets/pgs/mn.js"></script>
+<style media="screen">
+  #stdntsManagementWindow {
+          display: none;
+          position: fixed;
+          z-index: 1;
+          padding-top: 100px;
+          left: 0;
+          top: 0;
+          width: 100%;
+          height: 100%; /* Full height */
+          overflow: auto; /* Enable scroll if needed */
+          background-color: rgb(0,0,0); /* Fallback color */
+          background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+        }
+
+        /* Modal Content */
+        #stdntsManagementWindowContent {
+          background-color: #fefefe;
+          margin: auto;
+          padding: 20px;
+          border: 1px solid #888;
+          width: 35%;
+        }
+
+        /* The Close Button */
+        #stdntsMngmntCloseBtn {
+
+          float: right;
+          align-self: flex-end;
+        }
+</style>
+
+
+
 <div class="container-fluid">
+
+
         <div class="row">
             <div class="col-lg-12 col-sm-12">
                 <div class="card">
@@ -65,16 +101,12 @@
                                     <hr/>
                                     <table class="table table-striped">
                                         <thead>
+                                            <th>ID</th>
                                             <th>Stagaires</th>
-                                            <th>Filière</th>
                                             <th>Associer</th>
                                         </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>Najat Darouche</td>
-                                                <td>Équitation</td>
-                                                <td><button type="submit" class="btn btn-success btn-fill btn-wd">Associer</button></td>
-                                            </tr>
+                                        <tbody id="stdntsWithoutGrpTable">
+
                                         </tbody>
                                     </table>
                                 </div>
@@ -88,55 +120,7 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6 col-sm-6">
-                        <div class="card">
-                            <div class="content">
-                                <div class="content table-responsive table-full-width">
 
-                                    <div class="header">
-                                        <h4 class="title">Liste des Stagaires déja affectés  pour le  GROUPE-A </h4>
-                                    </div>
-                                    <hr/>
-
-                                    <table class="table table-striped">
-                                        <thead>
-                                            <th>Stagaires</th>
-                                            <th>Filière</th>
-                                            <th>Dissocier</th>
-                                        </thead>
-                                        <tbody>
-                                            <tr>
-                                                <td>Bourir Karim</td>
-                                                <td>Nutrition des cheveux</td>
-                                                <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
-                                            </tr>
-                                            <tr>
-                                                <td>Karim Karim</td>
-                                                <td>Nutrition des cheveux</td>
-                                                <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
-                                            </tr>
-                                            <tr>
-                                                <td>Yassine Karim</td>
-                                                <td>Nutrition des cheveux</td>
-                                                <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
-                                            </tr>
-                                            <tr>
-                                                <td>Faris Bensoussa</td>
-                                                <td>Nutrition des cheveux</td>
-                                                <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="footer">
-                                    <hr />
-                                    <div class="stats">
-                                        <i class="ti-bookmark"></i>Liste des Stagaires déja affectés au GROUPE-A
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
 
 
@@ -208,4 +192,79 @@
              <!--FIN Tableau--->
 
             </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6 col-sm-6">
+              <div class="card" id="stdntsManagementWindow" >
+                <div class="content" id="stdntsManagementWindowContent" >
+
+                      <button type="button" class="btn btn-danger" name="button" id="stdntsMngmntCloseBtn">X</button>
+
+                      <hr>
+                      <div class="header">
+                          <h4 class="title">Ajouter un nouvel Stagaire à ce groupe </h4>
+                      </div>
+                      <br>
+                      <div class="row" style="margin:auto;">
+
+
+                          <div class="col-lg-8 col-sm-6">
+                              <select class="form-control border-input" id="GrpFiliersCombo" name="Filieres">
+
+                                </select>
+                          </div>
+
+                          <div class="col-lg-4 col-sm-6">
+                              <button type="button" id="addGrpBtn" class="btn btn-success btn-fill btn-wd">Ajouter</button>
+                          </div>
+                      </div>
+                      <!-- <hr> -->
+
+                      <div class="content table-responsive table-full-width">
+                          <hr>
+                          <div class="header">
+                              <h4 class="title">Liste des Stagaires déja affectés  pour le  GROUPE-A </h4>
+                          </div>
+                          <br>
+
+                          <table class="table table-striped" >
+                              <thead>
+                                  <th>Stagaires</th>
+                                  <th>Filière</th>
+                                  <th>Dissocier</th>
+                              </thead>
+                              <tbody>
+                                  <tr>
+                                      <td>Bourir Karim</td>
+                                      <td>Nutrition des cheveux</td>
+                                      <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
+                                  </tr>
+                                  <tr>
+                                      <td>Karim Karim</td>
+                                      <td>Nutrition des cheveux</td>
+                                      <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
+                                  </tr>
+                                  <tr>
+                                      <td>Yassine Karim</td>
+                                      <td>Nutrition des cheveux</td>
+                                      <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
+                                  </tr>
+                                  <tr>
+                                      <td>Faris Bensoussa</td>
+                                      <td>Nutrition des cheveux</td>
+                                      <td><button type="submit" class="btn btn-warning btn-fill btn-wd">Dissocier</button></td>
+                                  </tr>
+                              </tbody>
+                          </table>
+                      </div>
+                      <div class="footer">
+                          <hr />
+                          <div class="stats">
+                              <i class="ti-bookmark"></i>Liste des Stagaires déja affectés au GROUPE-A
+                          </div>
+                      </div>
+                  </div>
+              </div>
+          </div>
         </div>
