try to get each cl indiviudual for the time planning

--- a/inc/assets/pgs/EmploiDuTemps.html
+++ b/inc/assets/pgs/EmploiDuTemps.html
@@ -13,23 +13,25 @@
                                     	<th>14:30-16:30</th>
                                     	<th>16:30-18:30</th>
                                     </thead>
-                                    <tbody>
+                                    <tbody id="PlaningTable">
                                         <tr>
-                                        	<td>LUNDI</td>
-                                        	<td id="1">
+                                        	 <td>
+                                             LUNDI
+                                           </td>
+                                        	 <td id="pt11">
                                                <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/Informatique/Encadrant-3</small></button></p>
                                                <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/Pratique/Encadrant-4</small></button></p>
-
-                                               <td id="2">
+                                            </td>
+                                            <td id="pt12" >
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                             </td>
 
-                                        	<td id="3">
+                                        	   <td id="pt13" >
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                             </td>
-                                        	<td id="4">
+                                        	  <td id="pt14" >
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -40,9 +42,13 @@
                                         </tr>
                                         <tr>
                                         	<td>MARDI</td>
-                                        	<td></td>
-                                        	<td></td>
-                                        	<td>
+                                        	<td id="pt21">
+                                            
+                                          </td>
+                                        	<td id="pt22">
+
+                                          </td>
+                                        	<td id="pt23">
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -51,14 +57,16 @@
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                             </td>
 
-                                        	<td></td>
+                                        	<td id="pt24">
+
+                                          </td>
                                         </tr>
                                         <tr>
                                         	<td>MERCREDI</td>
-                                        	<td></td>
-                                        	<td></td>
-                                        	<td></td>
-                                        	<td>
+                                        	<td id="pt31"></td>
+                                        	<td id="pt32"></td>
+                                        	<td id="pt33"></td>
+                                        	<td id="pt34">
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -69,8 +77,8 @@
                                         </tr>
                                         <tr>
                                         	<td>JEUDI</td>
-                                        	<td></td>
-                                        	<td>
+                                        	<td id="pt41"></td>
+                                        	<td id="pt42">
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -78,14 +86,14 @@
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                             </td>
-                                        	<td></td>
-                                        	<td></td>
+                                        	<td id="pt43"></td>
+                                        	<td id="pt44"></td>
                                         </tr>
                                         <tr>
                                         	<td>VENDREDI</td>
-                                        	<td></td>
-                                        	<td></td>
-                                        	<td>
+                                        	<td id="pt51"></td>
+                                        	<td id="pt52"></td>
+                                        	<td id="pt53">
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -93,11 +101,11 @@
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                             </td>
-                                        	<td></td>
+                                        	<td id="pt54"></td>
                                         </tr>
                                         <tr>
                                         	<td>SAMEDI</td>
-                                        	<td>
+                                        	<td id="pt61">
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -105,9 +113,9 @@
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                             </td>
-                                        	<td></td>
-                                        	<td></td>
-                                        	<td>
+                                        	<td id="pt62"></td>
+                                        	<td id="pt63"></td>
+                                        	<td id="pt64">
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
                                                 <p><button type="button" class="btn btn-warning btn-sm col-sm-12"><small>Groupe-B/PratiqueEncadrant-2</small></button></p>
                                                 <p><button type="button" class="btn btn-success btn-sm col-sm-12"><small>Groupe-A/ThéoriqueEncadrant-1</small></button></p>
@@ -139,24 +147,20 @@
                                 <div class="row">
                                         <div class="col-lg-2 col-sm-12">
                                             <label>Filiéres *</label>
-                                            <select class="form-control border-input" id="planingFiliersCombo" name="Filieres">
+                                            <select class="form-control border-input" id="planingFiliersCombo" name="">
 
                                               </select>
                                         </div>
                                         <div class="col-lg-2 col-sm-12">
                                             <label>Groupe *</label>
-                                            <select class="form-control border-input" id="planingGrpsCombo" name="Groupe">
-                                                <option></option>
-                                                <option>Groupe-A</option>
-                                                <option>Groupe-B</option>
-                                                <option>Groupe-C</option>
-                                                <option>Groupe-D</option>
+                                            <select class="form-control border-input" id="planingGrpsCombo" name="">
+                                              <option value="">Groupe *</option>
                                             </select>
                                         </div>
                                         <div class="col-lg-2 col-sm-12">
                                             <label>Module *</label>
-                                            <select class="form-control border-input" id="Module" name="Module">
-                                                <option></option>
+                                            <select class="form-control border-input" id="planingModuleCombo" name="">
+                                              <option value="">Module *</option>
                                                <option>Informatique</option>
                                                <option>Comunication</option>
                                                <option>Théorique</option>
@@ -166,37 +170,33 @@
 
                                         <div class="col-lg-2 col-sm-12">
                                             <label>Encadrants *</label>
-                                            <select class="form-control border-input" id="Encadrants" name="Encadrants">
-                                                <option></option>
-                                               <option>Encadrant-1</option>
-                                               <option>Encadrant-4</option>
-                                               <option>Encadrant-3</option>
-                                               <option>Encadrant-2</option>
+                                            <select class="form-control border-input" id="planingEncadrantsCombo" name="">
+                                              <option value="">Encadrants *</option>
                                             </select>
                                         </div>
 
                                         <div class="col-lg-2 col-sm-12">
                                             <label>Jours *</label>
-                                            <select class="form-control border-input" id="Justifabsence" name="Justifabsence">
-                                                <option></option>
-                                                <option>LUNDI</option>
-                                                <option>Mardi</option>
-                                                <option>MERCREDI</option>
-                                                <option>JEUDI</option>
-                                                <option>VENDREDI</option>
-                                                <option>SAMEDI</option>
+                                            <select class="form-control border-input" id="planingDaysCombo" name="">
+                                                <option value="">Jours *</option>
+                                                <option value="1">LUNDI</option>
+                                                <option value="2">Mardi</option>
+                                                <option value="3">MERCREDI</option>
+                                                <option value="4">JEUDI</option>
+                                                <option value="5">VENDREDI</option>
+                                                <option value="6">SAMEDI</option>
                                             </select>
                                         </div>
 
                                         <div class="col-lg-2 col-sm-12">
                                             <label>Séance *</label>
-                                            <select class="form-control border-input" id="Justifabsence" name="Justifabsence">
-                                                <th></th>
-                                                <option></option>
-                                                <option>08:30-10:30</option>
-                                                <option>10:30-12:30</option>
-                                                <option>14:30-16:30</option>
-                                                <option>16:30-18:30</option>
+                                            <select class="form-control border-input" id="planingSessionsCombo" name="">
+
+                                                <option value="">Séance *</option>
+                                                <option value="1">08:30-10:30</option>
+                                                <option value="2">10:30-12:30</option>
+                                                <option value="3">14:30-16:30</option>
+                                                <option value="4">16:30-18:30</option>
                                             </select>
                                         </div>
                                 </div>
